added browser tab icon

--- a/react-dine-frontend/index.html
+++ b/react-dine-frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
+    <link rel="icon" href="src/images/pizza.png" sizes="32x32" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Pacifico&family=Raleway:wght@200;600&display=swap" rel="stylesheet">
